--- a/index.html
+++ b/index.html
@@ -598,9 +598,9 @@
     <main>
         <!-- way we choose -->
         <section class="max-w-screen-2xl mx-auto px-8 md:px-8 lg:px-2 py-5 my-10">
-            <h2 class="text-5xl flex justify-center">Why Choose Us</h2>
-            <p class="text-xs flex justify-center my-5">Contrary to popular belief, is not simply random text. It has
-                roots in a piece of classical Latin
+            <h2 class="text-4xl flex justify-center font-bold  lg:text-5xl">Why Choose Us</h2>
+            <p class="text-xl flex justify-center my-5 text-center  mt-5 mb-5">Contrary to popular belief, is not simply random text. It has
+                roots in a piece of classical <br> Latin
                 literature from 45 BC, making it over 2000 years old.</p>
 
             <!-- 3 part flex -->
@@ -609,7 +609,7 @@
 
                 <!-- text 1111111111111111111 -->
 
-                <div class="space-y-5 lg:space-y-19">
+                <div class="   space-y-5 ">
                     <div class="flex flex-col items-center space-y-5  lg:flex-row gap-4">
                         <button class="btn btn-circle">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
@@ -619,10 +619,10 @@
                                     fill="#121212" />
                             </svg>
                         </button>
-                        <div>
+                        <div class="space-y-4 text-center lg:text-left">
                             <h2 class="text-2xl font-bold   ">Dedicated Team</h2>
                             <hr>
-                            <p class=" text-xl text-left ">Professional employees are there for you to pick
+                            <p class=" text-xl ">Professional employees are there for you to pick
                                 <br> the most amazing and fresh fruits.
                             </p>
                         </div>
@@ -637,10 +637,10 @@
                                 <path d="M18.888 9.976C19.092 9.312 19.2 8.64 19.2 7.976C19.2 5.404 17.228 3.312 14.8 3.312C13.148 3.312 11.632 4.212 10.8 5.62C9.96802 4.212 8.45202 3.312 6.80002 3.312C4.37202 3.312 2.40002 5.404 2.40002 7.976C2.40002 13.84 10.276 18.104 10.612 18.284C10.672 18.316 10.736 18.332 10.8 18.332C10.864 18.332 10.928 18.316 10.988 18.284C11 18.276 11.288 18.124 11.744 17.84C13.344 19.52 15.272 20.568 15.412 20.64C15.472 20.672 15.536 20.688 15.6 20.688C15.664 20.688 15.728 20.672 15.788 20.64C16.024 20.516 21.6 17.492 21.6 13.32C21.6 11.628 20.42 10.228 18.888 9.976ZM10.8 17.472C9.61202 16.792 3.20002 12.884 3.20002 7.976C3.20002 5.844 4.81602 4.112 6.80002 4.112C8.14002 4.112 9.78002 4.908 10.424 6.692C10.48 6.852 10.632 6.956 10.8 6.956C10.968 6.956 11.12 6.852 11.176 6.692C11.82 4.908 13.46 4.112 14.8 4.112C16.784 4.112 18.4 5.844 18.4 7.976C18.4 8.632 18.28 9.296 18.052 9.956C17.056 10.06 16.156 10.612 15.6 11.444C14.98 10.516 13.932 9.932 12.8 9.932C11.036 9.932 9.60002 11.452 9.60002 13.32C9.60002 14.796 10.296 16.124 11.204 17.232C11.04 17.332 10.9 17.416 10.8 17.472ZM15.6 19.828C14.644 19.272 10.4 16.616 10.4 13.32C10.4 11.892 11.476 10.732 12.8 10.732C13.696 10.732 14.792 11.264 15.224 12.46C15.28 12.62 15.432 12.724 15.6 12.724C15.768 12.724 15.92 12.62 15.976 12.46C16.408 11.268 17.504 10.732 18.4 10.732C19.724 10.732 20.8 11.892 20.8 13.32C20.8 16.616 16.556 19.272 15.6 19.828Z" fill="black"/>
                               </svg>
                         </button>
-                        <div>
+                        <div class="space-y-4 text-center lg:text-left">
                             <h2 class="text-2xl font-bold ">Fresh is Best</h2>
                             <hr>
-                            <p class=" text-xl text-left ">Professional employees are there for you to pick
+                            <p class=" text-xl  ">Professional employees are there for you to pick
                                 <br> the most amazing and fresh fruits.
                             </p>
                         </div>
@@ -671,10 +671,10 @@
                                 </defs>
                               </svg>
                         </button>
-                        <div>
+                        <div class="space-y-4 text-center lg:text-left">
                             <h2 class="text-2xl font-bold ">Gift Certificates</h2>
                             <hr>
-                            <p class=" text-xl text-left ">Professional employees are there for you to pick
+                            <p class=" text-xl  ">Professional employees are there for you to pick
                                 <br> the most amazing and fresh fruits.
                             </p>
                         </div>
@@ -685,23 +685,24 @@
                 </div>
                 <!-- img -->
 
-                <div class=""><img src="./images/whychoose1.png" alt="">
+                <div class="flex-1 pl-0 md:pl-40 lg:pl-0">
+                    <img src="./images/whychoose1.png" alt="">
                 </div>
 
                 <!-- text 2 2222222222222222-->
 
-                <div class="space-y-5 lg:space-y-20">
+                <div class="space-y-5 flex-1">
 
 
                     <div class="flex flex-col-reverse items-center space-y-5  lg:flex-row gap-4">
 
     
 
-                        <div>
-                            <h2 class="text-2xl font-bold  text-right">Integrated Supplier</h2>
+                        <div class="space-y-4 text-center lg:text-right">
+                            <h2 class="text-2xl font-bold  ">Integrated Supplier</h2>
                             <hr class="">
-                            <p class=" text-xl text-right ">Professional employees are there for you to pick
-                                <br> the most amazing and fresh fruits.
+                            <p class=" text-xl  ">Professional employees are there for you to pick
+                                the most amazing and fresh fruits.
                             </p>
                         </div>
                         <button class="btn btn-circle">
@@ -729,11 +730,11 @@
                     </div>
                     <div class="flex flex-col-reverse items-center space-y-5  lg:flex-row gap-4">
 
-                        <div>
-                            <h2 class="text-2xl text-right font-bold ">Sustainable Practice</h2>
+                        <div class="space-y-4 text-center lg:text-right">
+                            <h2 class="text-2xl  font-bold ">Sustainable Practice</h2>
                             <hr>
-                            <p class=" text-xl text-right ">Professional employees are there for you to pick
-                                <br> the most amazing and fresh fruits.
+                            <p class=" text-xl  ">Professional employees are there for you to pick
+                                 the most amazing and fresh fruits.
                             </p>
                         </div>
                         <button class="btn btn-circle">
@@ -746,11 +747,11 @@
                     </div>
                     <div class="flex flex-col-reverse items-center space-y-5  lg:flex-row gap-4">
 
-                        <div>
-                            <h2 class="text-2xl text-right font-bold ">The Benefits Only</h2>
+                        <div class="space-y-4 text-center lg:text-right">
+                            <h2 class="text-2xl font-bold  ">The Benefits Only</h2>
                             <hr>
-                            <p class=" text-xl text-right ">Professional employees are there for you to pick
-                                <br> the most amazing and fresh fruits.
+                            <p class=" text-xl  ">Professional employees are there for you to pick
+                                 the most amazing and fresh fruits.
                             </p>
                         </div>
                         <button class="btn btn-circle">
@@ -784,12 +785,13 @@
                 </div>
                 
 
-                <div class="grid grid-flow-col gap-4 mt-5">
+                <div class="grid grid-cols-3 gap-4 md:grid-cols-3 lg:grid-cols-6  lg:max-w-xl mx-auto text-white gap-5">
                     <a class="link link-hover">Home</a>
                     <a class="link link-hover">About us</a>
                     <a class="link link-hover">Contact</a>
                     <a class="link link-hover">Jobs</a>
                     <a class="link link-hover">Press kit</a>
+                    <a class="link link-hover">My Account</a>
 
                 </div>
 
